title alignment fix

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -50,7 +50,6 @@ body
         font-family: "Lato"
         font-size: 56px
         font-weight: 900
-        width: 90%
     .inpt
         flex-direction: column
         #text
